CREATE TABLE REGION (
    id_region NUMBER GENERATED BY DEFAULT AS IDENTITY,
    nombre VARCHAR2(100) NOT NULL
);

CREATE TABLE PROVINCIA (
    id_provincia NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_region NUMBER NOT NULL,
    nombre VARCHAR2(100) NOT NULL
);

CREATE TABLE COMUNA (
    id_comuna NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_provincia NUMBER NOT NULL,
    nombre VARCHAR2(100) NOT NULL
);

CREATE TABLE TIPO_INSTITUCION (
    id_tipo_institucion NUMBER GENERATED BY DEFAULT AS IDENTITY,
    nombre VARCHAR2(120) NOT NULL
);

CREATE TABLE INSTITUCION (
    id_institucion NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_tipo_institucion NUMBER NOT NULL,
    nombre VARCHAR2(220) NOT NULL
);

CREATE TABLE ACREDITACION_INSTITUCION (
    id_acreditacion NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_institucion NUMBER NOT NULL,
    anio_referencia NUMBER(4) NOT NULL,
    estado VARCHAR2(30) NOT NULL,
    periodo VARCHAR2(100),
    anios_acreditacion NUMBER(2)
);

CREATE TABLE AREA_CONOCIMIENTO (
    id_area NUMBER GENERATED BY DEFAULT AS IDENTITY,
    nombre VARCHAR2(150) NOT NULL
);

CREATE TABLE DENOMINACION_CARRERA (
    id_denominacion NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_area NUMBER NOT NULL,
    nombre VARCHAR2(250) NOT NULL
);

CREATE TABLE NIVEL_ESTUDIO (
    id_nivel_estudio NUMBER GENERATED BY DEFAULT AS IDENTITY,
    nombre VARCHAR2(100) NOT NULL
);

CREATE TABLE NIVEL_CARRERA (
    id_nivel_carrera NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_nivel_estudio NUMBER NOT NULL,
    nombre VARCHAR2(120) NOT NULL
);

CREATE TABLE MODALIDAD (
    id_modalidad NUMBER GENERATED BY DEFAULT AS IDENTITY,
    nombre VARCHAR2(80) NOT NULL
);

CREATE TABLE JORNADA (
    id_jornada NUMBER GENERATED BY DEFAULT AS IDENTITY,
    nombre VARCHAR2(80) NOT NULL
);

CREATE TABLE CARRERA (
    id_carrera NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_denominacion NUMBER NOT NULL,
    id_nivel_carrera NUMBER NOT NULL
);

CREATE TABLE OFERTA_ACADEMICA (
    id_oferta NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_institucion NUMBER NOT NULL,
    id_carrera NUMBER NOT NULL,
    id_comuna NUMBER NOT NULL,
    id_modalidad NUMBER NOT NULL,
    id_jornada NUMBER NOT NULL
);

CREATE TABLE TIPO_PLAN (
    id_tipo_plan NUMBER GENERATED BY DEFAULT AS IDENTITY,
    nombre VARCHAR2(120) NOT NULL
);

CREATE TABLE PLAN_OFERTA (
    id_plan_oferta NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_oferta NUMBER NOT NULL,
    id_tipo_plan NUMBER NOT NULL,
    duracion_plan NUMBER(2) NOT NULL,
    duracion_titulacion NUMBER(2) NOT NULL,
    duracion_total NUMBER(2) NOT NULL,
    valor_matricula NUMBER(10) NOT NULL,
    valor_arancel NUMBER(10) NOT NULL
);

CREATE TABLE REQUISITO_INGRESO (
    id_requisito_ingreso NUMBER GENERATED BY DEFAULT AS IDENTITY,
    nombre VARCHAR2(180) NOT NULL
);

CREATE TABLE VIA_INGRESO (
    id_via_ingreso NUMBER GENERATED BY DEFAULT AS IDENTITY,
    nombre VARCHAR2(250) NOT NULL
);

CREATE TABLE MATRICULA_HISTORICA (
    id_matricula NUMBER GENERATED BY DEFAULT AS IDENTITY,
    id_registro_fuente NUMBER NOT NULL,
    id_plan_oferta NUMBER NOT NULL,
    id_requisito_ingreso NUMBER NOT NULL,
    id_via_ingreso NUMBER NOT NULL,
    genero VARCHAR2(20) NOT NULL,
    edad NUMBER(3) NOT NULL,
    anio_ingreso NUMBER(4) NOT NULL,
    semestre_ingreso VARCHAR2(30) NOT NULL
);
