Table REGION {
  id_region int [pk, increment]
  nombre varchar(100) [not null, unique]
}

Table PROVINCIA {
  id_provincia int [pk, increment]
  id_region int [not null, ref: > REGION.id_region]
  nombre varchar(100) [not null]

  indexes {
    (id_region, nombre) [unique]
  }
}

Table COMUNA {
  id_comuna int [pk, increment]
  id_provincia int [not null, ref: > PROVINCIA.id_provincia]
  nombre varchar(100) [not null]

  indexes {
    (id_provincia, nombre) [unique]
  }
}

Table TIPO_INSTITUCION {
  id_tipo_institucion int [pk, increment]
  nombre varchar(120) [not null, unique]
}

Table INSTITUCION {
  id_institucion int [pk, increment]
  id_tipo_institucion int [not null, ref: > TIPO_INSTITUCION.id_tipo_institucion]
  nombre varchar(220) [not null, unique]
}

Table ACREDITACION_INSTITUCION {
  id_acreditacion int [pk, increment]
  id_institucion int [not null, ref: > INSTITUCION.id_institucion]
  anio_referencia int [not null]
  estado varchar(30) [not null]
  periodo varchar(100)
  anios_acreditacion int

  indexes {
    (id_institucion, anio_referencia) [unique]
  }
}

Table AREA_CONOCIMIENTO {
  id_area int [pk, increment]
  nombre varchar(150) [not null, unique]
}

Table DENOMINACION_CARRERA {
  id_denominacion int [pk, increment]
  id_area int [not null, ref: > AREA_CONOCIMIENTO.id_area]
  nombre varchar(250) [not null, unique]
}

Table NIVEL_ESTUDIO {
  id_nivel_estudio int [pk, increment]
  nombre varchar(100) [not null, unique]
}

Table NIVEL_CARRERA {
  id_nivel_carrera int [pk, increment]
  id_nivel_estudio int [not null, ref: > NIVEL_ESTUDIO.id_nivel_estudio]
  nombre varchar(120) [not null, unique]
}

Table MODALIDAD {
  id_modalidad int [pk, increment]
  nombre varchar(80) [not null, unique]
}

Table JORNADA {
  id_jornada int [pk, increment]
  nombre varchar(80) [not null, unique]
}

Table CARRERA {
  id_carrera int [pk, increment]
  id_denominacion int [not null, ref: > DENOMINACION_CARRERA.id_denominacion]
  id_nivel_carrera int [not null, ref: > NIVEL_CARRERA.id_nivel_carrera]

  indexes {
    (id_denominacion, id_nivel_carrera) [unique]
  }
}

Table OFERTA_ACADEMICA {
  id_oferta int [pk, increment]
  id_institucion int [not null, ref: > INSTITUCION.id_institucion]
  id_carrera int [not null, ref: > CARRERA.id_carrera]
  id_comuna int [not null, ref: > COMUNA.id_comuna]
  id_modalidad int [not null, ref: > MODALIDAD.id_modalidad]
  id_jornada int [not null, ref: > JORNADA.id_jornada]

  indexes {
    (id_institucion, id_carrera, id_comuna, id_modalidad, id_jornada) [unique]
  }
}

Table TIPO_PLAN {
  id_tipo_plan int [pk, increment]
  nombre varchar(120) [not null, unique]
}

Table PLAN_OFERTA {
  id_plan_oferta int [pk, increment]
  id_oferta int [not null, ref: > OFERTA_ACADEMICA.id_oferta]
  id_tipo_plan int [not null, ref: > TIPO_PLAN.id_tipo_plan]
  duracion_plan int [not null]
  duracion_titulacion int [not null]
  duracion_total int [not null]
  valor_matricula int [not null]
  valor_arancel int [not null]

  indexes {
    (id_oferta, id_tipo_plan, duracion_plan, duracion_titulacion, duracion_total, valor_matricula, valor_arancel) [unique]
  }
}

Table REQUISITO_INGRESO {
  id_requisito_ingreso int [pk, increment]
  nombre varchar(180) [not null, unique]
}

Table VIA_INGRESO {
  id_via_ingreso int [pk, increment]
  nombre varchar(250) [not null, unique]
}

Table MATRICULA_HISTORICA {
  id_matricula int [pk, increment]
  id_registro_fuente int [not null, unique]
  id_plan_oferta int [not null, ref: > PLAN_OFERTA.id_plan_oferta]
  id_requisito_ingreso int [not null, ref: > REQUISITO_INGRESO.id_requisito_ingreso]
  id_via_ingreso int [not null, ref: > VIA_INGRESO.id_via_ingreso]
  genero varchar(20) [not null]
  edad int [not null]
  anio_ingreso int [not null]
  semestre_ingreso varchar(30) [not null]
}
